--- a/data/feats/archetype-16-S8Hda5OtajS9gpqM.htm
+++ b/data/feats/archetype-16-S8Hda5OtajS9gpqM.htm
@@ -2,8 +2,7 @@ Name: Ward Mind
 Nom: Protection de l'esprit
 PrereqEN: Scrollmaster Dedication
 PrereqFR: Dévouement de Maître des parchemins
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You're currently affected by a mental effect that you gained by failing, but not critically failing, a saving throw.</p>
@@ -13,9 +12,10 @@ PrereqFR: Dévouement de Maître des parchemins
 <hr />
 <p><strong>Special</strong> You can use this reaction even if the mental effect prevents you from using reactions.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous êtes actuellement affecté par un effet mental que vous avez obtenu du fait d'un échec, mais pas d'un échec critique à un jet de sauvegarde</p>
+<p><strong>Conditions</strong> Vous êtes actuellement affecté par un effet mental que vous avez obtenu en raison d'un échec, mais pas d'un échec critique à un jet de sauvegarde</p>
 <p><strong>Déclencheur</strong> Votre tour se termine</p>
 <hr />
-<p>Pour protéger les connaissances de votre esprit contre toute intrusion ou effacement, vous vous prémunissez contre une attaque mentale, en retardant temporairement ses effets. Jusqu'à la fin de votre prochain tour, vous ignorez un seul effet mental qui en remplit la condition. Vous ne pouvez supprimer un effet particulier qu'une seule fois en utilisant la capacité Protection de l'esprit ou @Compendium[pf2e.feats-srd.wPJFEUOXwf7y5jN3]{Échappatoire cognitive}, même si vous possédez les deux dons.</p>
+<p>Pour protéger les connaissances de votre esprit contre toute intrusion ou effacement, vous vous prémunissez contre une attaque mentale, en retardant temporairement ses effets.</p>
+<p>Jusqu'à la fin de votre prochain tour, vous ignorez un seul effet mental qui en remplit la condition. Vous ne pouvez supprimer un effet particulier qu'une seule fois en utilisant la capacité Protection de l'esprit ou @Compendium[pf2e.feats-srd.wPJFEUOXwf7y5jN3]{Échappatoire cognitive}, même si vous possédez les deux dons.</p>
 <hr />
 <p><strong>Spécial</strong> Vous pouvez utiliser cette réaction même si l'effet mental vous empêche d'utiliser les réactions.</p>
