--- a/data/feats/archetype-20-8YSwzLNlmBLoEyUj.htm
+++ b/data/feats/archetype-20-8YSwzLNlmBLoEyUj.htm
@@ -2,8 +2,7 @@ Name: Cross the Final Horizon
 Nom: Traverser l'horizon final
 PrereqEN: Sky and Heaven Stance
 PrereqFR: Posture du Ciel et du Paradis
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You Stride up to your Speed and your ki enshrouds your limbs in a terrifying stormy energy, increasing the reach of your Sky and Heaven Stance unarmed attacks by 5 feet.<br />At the end of your movement, make up to three Strikes against a target you can reach, each at a -2 penalty. Each attack counts toward your multiple attack penalty, but the multiple attack penalty doesn't increase until after you have made all your attacks. Instead of the usual slashing or piercing damage, the damage for these Strikes is either electricity or sonic, as you choose with each Strike. If you successfully hit with all three Strikes, the target is @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drained} 3.</p>
