--- a/data/feats/class-01-gjec0ts3wkFbjvHN.htm
+++ b/data/feats/class-01-gjec0ts3wkFbjvHN.htm
@@ -2,8 +2,7 @@ Name: You're Next
 Nom: Tu es le suivant
 PrereqEN: |trained in Intimidation
 PrereqFR: qualifié en Intimidation
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: After downing a foe, you menacingly remind another foe that you’re coming after them next.
@@ -16,4 +15,5 @@ Avantage: Après avoir abattu un ennemi, vous rappelez de manière menaçante à
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous réduisez un ennemi à 0 point de vie</p>
 <hr />
-<p>Après avoir abattu un adversaire, vous rappelez d’un ton menaçant à un autre qu’il est le prochain sur votre liste. Vous faites un test d’Intimidation avec un bonus de circonstances de +2 pour @Compendium[pf2e.actionitems.2u915NdUyQan6uKF]{Démoraliser} une unique créature que vous pouvez voir et qui peut vous voir. Si vous possédez le rang de maîtrise légendaire en Intimidation, vous pouvez utiliser ce pouvoir comme une action gratuite avec le même déclencheur.</p>
+<p>Après avoir abattu un adversaire, vous rappelez d’un ton menaçant à un autre qu’il est le prochain sur votre liste. Vous faites un test d’Intimidation avec un bonus de circonstances de +2 pour @Compendium[pf2e.actionitems.2u915NdUyQan6uKF]{Démoraliser} une unique créature que vous pouvez voir et qui peut vous voir.</p>
+<p>Si vous possédez le rang de maîtrise légendaire en Intimidation, vous pouvez utiliser ce pouvoir comme une action gratuite avec le même déclencheur.</p>
