--- a/data/feats/class-04-kqW6d3Dfk4nApd7y.htm
+++ b/data/feats/class-04-kqW6d3Dfk4nApd7y.htm
@@ -2,8 +2,7 @@ Name: Combat Reading
 Nom: Lecture du combat
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You use a performer's cold reading techniques, aura reading, and other tricks to discover your foe's strengths and weaknesses.
@@ -18,7 +17,7 @@ Avantage: Votre examen occulte d'un ennemi au combat révèle ses forces et ses 
 <p><strong>Critical Failure</strong> The GM gives you false information (the GM <br />makes up the information).</p>
 ------ Description (fr) ------
 <p>Vous utilisez les techniques de lecture à froid de l'artiste, la lecture des auras et autres astuces pour découvrir les faiblesses et les forces de vos ennemis.</p>
-<p>Le MJ lance un test secret d'Occultisme pour vous contre le DD de Duperie ou de Discrétion (celui qui est le plus élevé) d'un ennemi de votre choix qui est engagé en combat et qui n'est pas @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué}, @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} ou @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Non-détecté}. Le MJ pourrait appliquer des pénalités en fonction de la distance entre vous et l'ennemi. L'ennemi est alors temporairement immunisé à votre lecture du Combat pendant 1 journée.</p>
+<p>Le MJ lance un test secret d'Occultisme pour vous contre le plus élevé entre le DD de Duperie ou de Discrétion d'un ennemi de votre choix qui est engagé en combat et qui n'est pas @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masqué}, @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Caché} ou @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Non-détecté}. Le MJ pourrait appliquer des pénalités en fonction de la distance entre vous et l'ennemi. L'ennemi est alors temporairement immunisé à votre lecture du Combat pendant 1 journée.</p>
 <hr />
 <p><strong>Succès critique</strong> Le MJ choisit et vous donne deux des informations suivantes à propos de votre ennemi : quelle est sa plus grande faiblesse, quel est son modificateur de jet de protection le plus bas, une immunité que l'ennemi possède ou quelle résistance de votre ennemi est la plus haute. En cas d'égalité, le MJ en choisit une de manière aléatoire.</p>
 <p><strong>Succès</strong> Le MJ donne une unique information tirée de la liste ci-dessus à propos de l'ennemi.</p>
