--- a/data/feats/class-18-7mGMHb7irGKZ0eQo.htm
+++ b/data/feats/class-18-7mGMHb7irGKZ0eQo.htm
@@ -2,8 +2,7 @@ Name: Miraculous Possibility
 Nom: Possibilité miraculeuse
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your deity empowers you to perform minor miracles, allowing you to readily adapt to the fluctuating needs of your duties.
@@ -14,6 +13,6 @@ Avantage: Un emplacement d'un niveau de sort vous permet de lancer n'importe que
 <p>Once during your daily preparations, you can use a spell slot to hold sheer divine potential, rather than using it to prepare a spell. You can use this spell slot to cast any spell you know from the divine spell list that's at least 2 levels lower than the slot you designate. The spell acts in all ways as a spell of 2 levels lower.</p>
 <p>You don't have any particular spell prepared in that slot until you cast it.</p>
 ------ Description (fr) ------
-<p>Votre divinité vous donne la puissance d'accomplir des miracles mineurs, vous permettant de vous adapter rapidement aux besoins fluctuant de vos devoirs.</p>
+<p>Votre divinité vous donne la puissance d'accomplir des miracles mineurs, vous permettant de vous adapter rapidement aux besoins fluctuants de vos devoirs.</p>
 <p>Une fois au cours de votre préparatifs quotidiens, vous pouvez utiliser un emplacement de sort pour renfermer du pouvoir divin à l'état brut, plutôt que de l'utiliser pour préparer un sort. Vous pouvez utiliser cet emplacement de sort pour lancer n'importe quel sort que vous connaissez issu de la liste des sorts divins qui possède au moins 2 niveaux de moins que l'emplacement de sort que vous avez choisi. Le sort agi de la même manière qu'un sort de 2 niveaux de moins.</p>
 <p>Vous n'avez pas de sort particulier préparé dans cet emplacement jusqu'à son lancement.</p>
