--- a/data/feats/class-18-T4Xm8vYtnGMOM0Cw.htm
+++ b/data/feats/class-18-T4Xm8vYtnGMOM0Cw.htm
@@ -2,8 +2,7 @@ Name: Echoing Channel
 Nom: Canalisation répétée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: When you pull forth positive or negative energy, you also create a smaller pocket of that energy.
