--- a/data/equipment/weapon-01-c124j3cpv8rl5MLp.htm
+++ b/data/equipment/weapon-01-c124j3cpv8rl5MLp.htm
@@ -9,5 +9,5 @@ Nom: Grenade d'épines de pesh (Inférieure)
 <p>The bomb deals 1d6 piercing damage and 1 piercing splash damage, and the target is stupefied 1.</p>
 ------ Description (fr) ------
 <p>Les grenades d'épines de pesh sont des bombes explosives enveloppées d'aiguilles traités alchimiquement à partir de cactus de pesh. Une grenade d'épines de pesh inflige les dégâts perforants indiqués et des dégâts d'éclaboussure. Si elle atteint sa cible, cette dernière obtient la condition @Compendium[pf2e.conditionspf2e.e1XGnhKNSQIm5IXg]{Stupefiée} jusqu'à la fin de son prochain tour.</p>
-<p><span><strong>Activation</strong> <span class="pf2-icon">A</span> Frappe</span></p>
+<p><span><strong>Activation</strong> <span class="pf2-icon">A</span> Attaquer</span></p>
 <p>La bombe inflige 1d6 dégâts perforants et 1 dégât perforant d'éclaboussure et la cible est Stupéfiée 1.</p>
