--- a/data/equipment/weapon-01-Xnqglykl3Cif8rN9.htm
+++ b/data/equipment/weapon-01-Xnqglykl3Cif8rN9.htm
@@ -1,7 +1,6 @@
 Name: Thunderstone (Lesser)
 Nom: Pierre à tonnerre (inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When this stone hits a creature or a hard surface, it explodes with a deafening bang. A thunderstone deals the listed sonic damage and sonic splash damage, and each creature within 10 feet of the space in which the stone exploded must succeed at a Fortitude saving throw with the listed DC or be deafened until the end of its next turn. Many types of thunderstone grant an item bonus to attack rolls.</p>
