--- a/data/equipment/weapon-01-j8ajvNqyyQGBpBch.htm
+++ b/data/equipment/weapon-01-j8ajvNqyyQGBpBch.htm
@@ -8,5 +8,5 @@ Nom: Bombe fléau (inférieure)
 <p>Blight bombs contain volatile toxic chemicals that rot flesh. A blight bomb deals 1d6 poison damage, 1d4 persistent poison damage, and 1 poison splash damage.</p>
 ------ Description (fr) ------
 <p><strong>Utilisation</strong> Tenir dans une main</p>
-<p><strong>Activation</strong> <span class="pf2-icon">A</span> Attaquer</p>
-<p>Les bombes anti-maladie contiennent des produits chimiques toxiques volatils qui pourrissent la chair. La bombe fléau inférieure cause 1d6 de dégâts de poison, 1d4 dégât de poison persistant et 1 point de dégât d'éclaboussure.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Frappe</p>
+<p>Les bombes fléau contiennent des produits chimiques toxiques volatils qui pourrissent la chair. La bombe fléau inférieure cause 1d6 de dégâts de poison, 1d4 dégâts de poison persistant et 1 point de dégât d'éclaboussure.</p>
