--- a/data/equipment/weapon-17-b1gx7ZhuFJAyJOo8.htm
+++ b/data/equipment/weapon-17-b1gx7ZhuFJAyJOo8.htm
@@ -1,7 +1,6 @@
 Name: Peshpine Grenade (Major)
 Nom: Grenade d'épines de pesh (majeure)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><span>Peshspine grenades are explosive bombs packed with alchemically treated needles from the pesh cactus. A peshspine grenade deals the listed piercing damage and splash damage. On a hit, the target gains the stupefied condition until the end of its next turn.<br /></span></p>
@@ -9,7 +8,6 @@ Nom: Grenade d'épines de pesh (majeure)
 <p><span><strong>Activate</strong> <span class="pf2-icon">A</span> Strike</span></p>
 <p>You gain a +3 item bonus to attack rolls. The bomb deals 4d6 piercing damage and 4 piercing splash damage, and the target is stupefied 3.</p>
 ------ Description (fr) ------
-<p><span>Les grenades d'épines de pesh sont des bombes explosives enveloppées d'aiguilles traitées alchimiquement à partir de cactus de pesh. Une grenade d'épines de pesh inflige les dégâts perforants indiqués et des dégâts d'éclaboussure. Si elle atteint sa cible, cette dernière obtient la condition @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{stupefiée} jusqu'à la fin de son prochain tour.<br></span></p>
-<p><span>Certains types de grenade d'épines de pesh confèrent un bonus au jet d'attaque.<br></span></p>
-<p><span><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Frappe</span></p>
-<p>Vous gagnez un bonus de +3 au jet d'attaque. La bombe inflige 4d6 dégâts perforants et 4 dégâts perforants d'éclaboussure et la cible est stupéfiée 3.</p>
+<p>Les grenades d'épines de pesh sont des bombes explosives enveloppées d'aiguilles traités alchimiquement à partir de cactus de Pesh. Une grenade d'épines de pesh inflige les dégâts perforants indiqués et des dégâts d'éclaboussure. Si elle atteint sa cible, cette dernière obtient la condition @Compendium[pf2e.conditionspf2e.e1XGnhKNSQIm5IXg]{Stupefiée} jusqu'à la fin de son prochain tour.</p>
+<p><span><strong>Activation</strong> <span class="pf2-icon">A</span> Frappe</span></p>>
+<p>Vous gagnez un bonus de +3 au jet d'attaque. La bombe inflige 4d6 dégâts perforants et 4 dégâts perforants d'éclaboussure et la cible est Stupéfiée 3.</p>
