--- a/data/equipment/weapon-01-AFR01HVd7DcZvkpP.htm
+++ b/data/equipment/weapon-01-AFR01HVd7DcZvkpP.htm
@@ -6,6 +6,6 @@ Nom: Foudre en bouteille (inférieur)
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Strike</p>
 <p>Bottled lightning is packed with volatile reagents that create a blast of electricity when they are exposed to air. Bottled lightning deals 1d6 electricity damage and 1 electricity splash damage. On a hit, the target becomes flat-footed until the start of your next turn.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span class="pf2-icon">A</span> Attaquer</p>
-<p>La foudre en bouteille déborde de réactifs volatiles qui créent une décharge électrique une fois exposés à l’air. Elle inflige les dégâts d’électricité, les dégâts d’électricité persistants et les dégâts d’éclaboussure d’électricité indiqués. Une cible touchée est prise au dépourvu jusqu’au début de votre prochain tour. Plusieurs types de bombes donnent un bonus d’objet aux jets d’attaque.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Frappe</p>
+<p>La foudre en bouteille déborde de réactifs volatiles qui créent une décharge électrique une fois exposés à l’air. Elle inflige les dégâts d’électricité, les dégâts d’électricité persistants et les dégâts d’éclaboussure d’électricité indiqués. Une cible touchée est@Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} jusqu’au début de votre prochain tour. Plusieurs types de bombes donnent un bonus d’objet aux jets d’attaque.</p>
 <p>La bombe inflige 1d6 dégâts d’électricité et 1 dégât d’éclaboussure d’électricité.</p>
