--- a/data/equipment/weapon-01-M1k5QQc1qQLxzyCK.htm
+++ b/data/equipment/weapon-01-M1k5QQc1qQLxzyCK.htm
@@ -6,5 +6,5 @@ Nom: Fiole d’acide (Inférieur)
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Strike</p>
 <p>This flask filled with corrosive acid deals 1 acid damage, 1d6 persistent acid damage, and 1 acid splash damage.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span class="pf2-icon">A</span> Attaquer</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Frappe</p>
 <p>Cette fiole renferme un acide corrosif qui inflige 1 dégâts d’acide, 1d6 dégâts persistants et 1 dégâts d’éclaboussure d’acide.</p>
