--- a/data/spells/divination-00-OhD2Z6rIGGD5ocZA.htm
+++ b/data/spells/divination-00-OhD2Z6rIGGD5ocZA.htm
@@ -1,7 +1,6 @@
 Name: Read Aura
 Nom: Lecture de l'aura
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You focus on the target object, opening your mind to perceive magical auras. When the casting is complete, you know whether that item is magical, and if it is, you learn the school of magic.</p>
@@ -10,7 +9,7 @@ Nom: Lecture de l'aura
 <p><strong>Heightened (3rd)</strong> You can target up to 10 objects.</p>
 <p><strong>Heightened (6th)</strong> You can target any number of objects.</p>
 ------ Description (fr) ------
-<p>Vous vous concentrez sur l’objet ciblé en ouvrant votre esprit pour percevoir les auras magiques. Une fois l’incantation terminée, vous savez si un objet est magique ou non. S’il l’est, vous découvrez l’école de magie (pages 297 et 298).</p>
+<p>Vous vous concentrez sur l’objet ciblé en ouvrant votre esprit pour percevoir les auras magiques. Une fois l’incantation terminée, vous savez si un objet est magique ou non. S’il l’est, vous découvrez l’école de magie.</p>
 <p>Si l’objet est une illusion, vous la détectez uniquement si le niveau de l’effet est inférieur au niveau de votre sort lecture de l’aura.</p>
 <hr>
 <p><strong>Intensifié (3e)</strong> Vous pouvez cibler jusqu’à 10 objets.</p>
