--- a/data/spells/divination-01-HOj2YsTpkoMpYJH9.htm
+++ b/data/spells/divination-01-HOj2YsTpkoMpYJH9.htm
@@ -1,7 +1,6 @@
 Name: Practice Makes Perfect
 Nom: En forgeant on devient forgeron
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You or an ally within range fails a skill check for a skill in which you or they are trained.</p>
@@ -9,6 +8,6 @@ Nom: En forgeant on devient forgeron
 <p>The target gains a +2 status bonus to the triggering check, or a +3 bonus if the target has master or better proficiency in the skill. This bonus can change the outcome of the target's check.</p>
 <p>@Compendium[pf2e.spell-effects.XMBoKRRyooKnGkHk]{Spell Effect: Practise Makes Perfect}</p>
 ------ Description (fr) ------
-<p><strong>Décelncheur</strong> Vous ou un allié à portée échouez sur un test de compétence pour une compétence dans laquelle il ou vous êtes qualifié.</p>
+<p><strong>Déclencheur</strong> Vous ou un allié à portée échouez sur un test de compétence pour une compétence dans laquelle il ou vous êtes qualifié.</p>
 <hr />
 <p>La cible obtient un bonus de statut de +2 au jet déclencheur ou un bonus de +3 si la cible possède un rang de maître ou supérieur dans la compétence. Ce bonus peut changer l'issue du test de la cible.</p>
