--- a/data/spells/divination-01-XhgMx9WC6NfXd9RP.htm
+++ b/data/spells/divination-01-XhgMx9WC6NfXd9RP.htm
@@ -1,7 +1,6 @@
 Name: Hyperfocus
 Nom: Hyperfocalisation
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You sharpen a creature's senses, though more distant objects become hazy, indistinct, or muted to it.</p>
@@ -18,12 +17,12 @@ Nom: Hyperfocalisation
 <p><strong>Heightened (6th)</strong> You can target up to 4 creatures.</p><p>@Compendium[pf2e.spell-effects.qQLHPbUFASKFky1W]{Spell Effect: Hyperfocus}</p>
 ------ Description (fr) ------
 <p>Vous aiguisez les sens d'une créature de sorte que des objets distants deviennent brumeux, indistincts ou assourdis pour ce qui le concerne.</p>
-<p>La cible obtient un bonus de statut de +1 aux tests de Perception tenté avec l'un de ses sens précis. De plus tout sens imprécis que la cible possède est aiguisé pour en faire un sens précis (bien qu'ils ne reçoivent pas de bonus de statut). Quoi qu'il en soit, la cible ne peut rien percevoir au delà d'une portée de 6 m avec aucun de ses sens. La durée est déterminée par le jet de Volonté de la cible. Vous pouvez permettre à vos alliés de choisir le résultat au lieu de lancer un jet de sauvegarde.</p>
+<p>La cible obtient un bonus de statut de +1 aux tests de Perception tenté avec l'un de ses sens précis. De plus, tout sens imprécis que la cible possède est aiguisé pour en faire un sens précis (bien qu'ils ne reçoivent pas de bonus de statut). Quoi qu'il en soit, la cible ne peut rien percevoir au delà d'une portée de 6 mètres avec aucun de ses sens. La durée est déterminée par le jet de Volonté de la cible. Vous pouvez permettre à vos alliés de choisir le résultat au lieu de lancer un jet de sauvegarde.</p>
 <hr />
-<p><strong>Succès crritique</strong> La cible n'est pas affectée.</p>
+<p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
 <p><strong>Succès</strong> La cible est affectée pendant 1 round.</p>
 <p><strong>Échec</strong> La cible est affectée pendant 1 minute.</p>
-<p><strong>Échec critique</strong> Comme avec l'échec mais la cible ne peut rien percevoir au-delà d'une portée de 3 m.</p>
+<p><strong>Échec critique</strong> Comme avec l'échec mais la cible ne peut rien percevoir au-delà d'une portée de 3 mètres.</p>
 <hr />
 <p><strong>Intensifié (3e)</strong> Vous pouvez cibler jusqu'à 2 créatures.</p>
 <p><strong>Intensifié (6e)</strong> Vous pouvez cibler jusqu'à 4 créatures.</p>
