--- a/data/spells/divination-02-NhNKzq1DvFxkvTEc.htm
+++ b/data/spells/divination-02-NhNKzq1DvFxkvTEc.htm
@@ -1,7 +1,6 @@
 Name: Vision of Weakness
 Nom: Vision de faiblesse
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You focus your gaze on a creature and gain a flash of divine insight into its nature. If the creature has any weaknesses, you learn them, as well as which of its three saving throw modifiers is lowest.</p>
@@ -10,4 +9,5 @@ Nom: Vision de faiblesse
 <p>@Compendium[pf2e.spell-effects.70qdCBokXBvKIUIQ]{Spell Effect: Vision of Weakness}</p>
 ------ Description (fr) ------
 <p>Vous concentrez votre regard sur une créature et obtenez un flash d'intuition divine de sa nature.</p>
-<p>Si la créature possède n'importe quelle faiblesse, vous l'apprenez ainsi que celui de ses trois modificateurs aux jets de sauvegarde qui est le plus faible. Vous obtenez aussi une compréhension intuitive de ses déplacements et obtenez un bonus de statut de +2 à votre prochain jet d'attaque (ou test de compétence effectué lors d'une action d'attaque) contre cet ennemi avant la fin de votre tour. La cible est alors temporairement immunisée à <em>Vision de faiblesse</em> pendant 1 jour.</p>
+<p>Si la créature possède n'importe quelle faiblesse, vous l'apprenez ainsi que celui de ses trois modificateurs aux jets de sauvegarde qui est le plus faible. Vous obtenez aussi une compréhension intuitive de ses déplacements et obtenez un bonus de statut de +2 à votre prochain jet d'attaque (ou test de compétence effectué lors d'une action d'attaque) contre cet ennemi avant la fin de votre tour. La cible est alors temporairement immunisée à Vision de faiblesse pendant 1 jour.</p>
+<p>@Compendium[pf2e.spell-effects.70qdCBokXBvKIUIQ]{Effet : Vision de faiblesse}</p>
