--- a/data/spells/divination-03-KHnhPHL4x1AQHfbC.htm
+++ b/data/spells/divination-03-KHnhPHL4x1AQHfbC.htm
@@ -1,7 +1,6 @@
 Name: Mind Reading
 Nom: Lecture des pensées
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>With a cursory mental touch, you attempt to read the target's mind. It must attempt a Will save. The target then becomes temporarily immune to your mind reading for 1 hour.</p>
