--- a/data/spells/divination-06-7DN13ILADW2N9Z1t.htm
+++ b/data/spells/divination-06-7DN13ILADW2N9Z1t.htm
@@ -1,7 +1,6 @@
 Name: Commune
 Nom: Communion
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You call upon an unknown planar entity to answer questions; this is a servitor of your deity if you have one and use Religion. You can ask up to seven questions that could be answered with "Yes" or "No." The entity is likely to know answers related to its purview; a servitor of @Compendium[pf2e.deities.swwwP7eVmlNuWTb7]{Gozreh} would likely know about unnatural weather patterns and a servitor of @Compendium[pf2e.deities.JgqH3BhuEuA4Zyqs]{Desna} would likely know someone's travel route. The entity answers with one word answers such as "Yes," "No," "Likely," and "Unknown," though its answers always reflect its own agenda and could be deceptive.</p>
