--- a/data/spells/enchantment-00-GdN5YQE47gd79k7X.htm
+++ b/data/spells/enchantment-00-GdN5YQE47gd79k7X.htm
@@ -1,7 +1,6 @@
 Name: Wilding Word
 Nom: Paroles sauvages
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>With a few words, you convince a wild creature you are a kindred spirit, making it reluctant to harm you. The target must attempt a Will save. Regardless of the outcome, the target is then temporarily immune for 1 minute.</p>
@@ -16,4 +15,4 @@ Nom: Paroles sauvages
 <p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
 <p><strong>Succès</strong> Lorsque la cible tente un jet d'attaquee ou un test de compétence qui devrait vous blesser, elle subit une pénalité de statut de -2 à son jet.</p>
 <p><strong>Échec</strong> Comme en cas de succès, mais la cible devient aussi @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 chaque fois qu'elle vous blesse.</p>
-<p><strong>Échec critique</strong> Comme en cas de succès, mais la cible devient malade 2 chaque fois qu'elle vous blesse.</p>
+<p><strong>Échec critique</strong> Comme en cas de succès, mais la cible devient Malade 2 chaque fois qu'elle vous blesse.</p>
