--- a/data/spells/enchantment-03-DCQHaLrYXMI37dvW.htm
+++ b/data/spells/enchantment-03-DCQHaLrYXMI37dvW.htm
@@ -1,7 +1,6 @@
 Name: Paralyze
 Nom: Paralysie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You block the target's motor impulses before they can leave its mind, threatening to freeze the target in place. The target must attempt a Will save.</p>
@@ -13,7 +12,7 @@ Nom: Paralysie
 <hr />
 <p><strong>Heightened (7th)</strong> You can target up to 10 creatures.</p>
 ------ Description (fr) ------
-<p>Vous bloquez les impulsions neuronales de la cible dans une tentative pour l’immobiliser.</p>
+<p>Vous bloquez les impulsions neuronales de la cible avant qu'elles ne quittent son cerveau menaçant de l’immobiliser.</p>
 <p>La cible doit faire un jet de Volonté.</p>
 <hr />
 <p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
