--- a/data/spells/enchantment-03-aewxsale5xWEPKLk.htm
+++ b/data/spells/enchantment-03-aewxsale5xWEPKLk.htm
@@ -1,7 +1,6 @@
 Name: Zone of Truth
 Nom: Zone de vérité
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You designate an area in which creatures are compelled to speak only truth. Creatures within or entering the area have difficulty lying. Each potentially affected creature must attempt a Will save when the spell is cast or when the creature first enters the area. It uses the results of this initial save if it leaves and reenters the area. Affected creatures are aware of this enchantment; therefore, they can avoid answering questions to which they would normally respond with a lie, or they can be evasive as long as they remain within the boundaries of the truth.</p>
