--- a/data/spells/enchantment-04-FSu6ZKxr3xdS75wq.htm
+++ b/data/spells/enchantment-04-FSu6ZKxr3xdS75wq.htm
@@ -1,7 +1,6 @@
 Name: Roar of the Wyrm
 Nom: Rugissement du Ver
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You channel the might of dragons into your voice, letting out a roar that engenders respect in dragonkind but that instills fear in most other creatures.</p>
@@ -15,7 +14,7 @@ Nom: Rugissement du Ver
 ------ Description (fr) ------
 <p>Vous canalisez la puissance des dragons dans votre voix, laissant échapper un rugissement qui engendre le respect de la gent draconique mais qui instille la terreur à la plupart des autres créatures.</p>
 <p>Le rugissement impressionnant vous octroie un bonus de circonstances de +2 aux tests de Diplomatie pendant 10 minutes contre les dragons qui se trouvaient dans la zone au moment de l'incantation. Tous les ennemis dans la zone autres que les dragons doivent tenter un jet de Volonté ; Pour ces ennemis, <em>Rugissement du Ver</em> est un effet de terreur.</p>
-<p><em>Rugissement du Ver</em> affecte les créatures qui ne sont pas des dragons avec des liens profonds avec le genre draconique (tel qu'un barbare avec l'instinct draconique, un ensorceleur avec le lignage draconique ou un membre d'une culture qui révère les dragons) comme s'ils avaient le trait dragon. Le MJ décide si une créature est suffisamment alignée avec le genre draconique pour être affecté de cette manière.</p>
+<p><em>Rugissement du Ver</em> affecte les créatures qui, bien que n'étant pas des dragons, entretiennent des liens profonds avec le genre draconique (tel qu'un barbare avec l'instinct draconique, un ensorceleur avec le lignage draconique ou un membre d'une culture qui révère les dragons) comme s'ils avaient le trait dragon. Le MJ décide si une créature est suffisamment alignée avec le genre draconique pour être affecté de cette manière.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Succès</strong> La créature est @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Effrayée} 1.</p>
