--- a/data/spells/enchantment-01-u4FGIUQgruLjml7J.htm
+++ b/data/spells/enchantment-01-u4FGIUQgruLjml7J.htm
@@ -1,7 +1,6 @@
 Name: Magic's Vessel
 Nom: Réceptacle magique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A creature becomes a receptacle for pure magical energy sent by your deity.</p>
@@ -10,4 +9,5 @@ Nom: Réceptacle magique
 <p>@Compendium[pf2e.spell-effects.zpxIwEjnLUSO1B4z]{Spell Effect: Magic's Vessel}</p>
 ------ Description (fr) ------
 <p>Une créature devient le réceptacle d’une pure énergie magique envoyée par votre divinité.</p>
-<p>La cible gagne un bonus de statut de +1 aux jets de sauvegarde. Chaque fois que vous Lancez un sort depuis vos emplacements de sorts, vous le Maintenez automatiquement et accordez à la cible une résistance aux dégâts des sorts jusqu’au début de votre prochain tour. Cette résistance est égale au niveau du sort que vous avez lancé</p>
+<p>La cible gagne un bonus de statut de +1 aux jets de sauvegarde. Chaque fois que vous Lancez un sort depuis vos emplacements de sorts, vous le Maintenez automatiquement et accordez à la cible une résistance aux dégâts des sorts jusqu’au début de votre prochain tour. Cette résistance est égale au niveau du sort que vous avez lancé.</p>
+<p>@Compendium[pf2e.spell-effects.zpxIwEjnLUSO1B4z]{Effet: Réceptacle magique}</p>
