--- a/data/spells/enchantment-04-LiGbewa9pO0yjbsY.htm
+++ b/data/spells/enchantment-04-LiGbewa9pO0yjbsY.htm
@@ -1,7 +1,6 @@
 Name: Confusion
 Nom: Confusion
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You befuddle your target with strange impulses, causing it to act randomly. The effects are determined by the target's Will save. You can Dismiss the spell.</p>
@@ -18,6 +17,6 @@ Nom: Confusion
 <p><strong>Succès critique</strong> La cible n’est pas affectée.</p>
 <p><strong>Succès</strong> La cible balbutie de façon incohérente et est @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Étourdie} 1.</p>
 <p><strong>Échec</strong>  La cible est @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confuse} pendant 1 minute. Elle a droit à un nouveau jet de sauvegarde à la fin de chacun de ses tours pour mettre un terme à la confusion.</p>
-<p><strong>Échec critique</strong> La cible est @Compendium[pf2e.conditionspf2e.yblD8fOR1J8rDwEQ]{confuse} pendant 1 minute sans jet de sauvegarde pour terminer l’effet en avance.</p>
+<p><strong>Échec critique</strong> La cible est Confuse pendant 1 minute sans jet de sauvegarde pour terminer l’effet en avance.</p>
 <hr />
 <p><strong>Intensifié (8e)</strong> Vous pouvez cibler jusqu’à 10 créatures.</p>
