--- a/data/spells/enchantment-04-LX4pCagYLpc9hEji.htm
+++ b/data/spells/enchantment-04-LX4pCagYLpc9hEji.htm
@@ -1,7 +1,6 @@
 Name: Aromatic Lure
 Nom: Leurre aromatique
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You override a target's olfactory senses, luring them to a specific location through tantalizing false scents. Select a single square within range that is not hazardous or occupied by a creature. The target is drawn to the selected location, becoming euphoric upon arrival. The target must attempt a Will save.</p>
@@ -17,8 +16,8 @@ Nom: Leurre aromatique
 <p>Choisissez une unique case à portée qui n'est pas dangereuse ou occupée par une créature. La cible est attirée jusqu'à ce lieu choisi, devenant euphorique en arrivant. La cible doit faire un jet de Volonté.</p>
 <hr />
 <p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
-<p><strong>Succès</strong> La cible est distraite par les odeurs alléchantes devenant Stupéfiée 1 pendant 1 round.</p>
-<p><strong>Échec</strong> La cible est Stupéfiée 2 et se déplace vers le lieu choisi par la route la lus directe pendant 1 round, en passant sur tout danger évident et sur les ennemis sur son chemin.</p>
-<p><strong>Échec critique</strong> La cible est Stupéfiée 4 et see déplace vers la case choisie par la plus directe route possible pendant 1 round, en passnt sur tout danger évident et sur les ennemis sur son passage. Si la crature atteint sa destination, elle doit y rester pendant 1d4 rounds mais peut autrement agir normalement.</p>
+<p><strong>Succès</strong> La cible est distraite par les odeurs alléchantes et devient @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfiée} 1 pendant 1 round.</p>
+<p><strong>Échec</strong> La cible est Stupéfiée 2 et se déplace vers le lieu choisi par la route la plus directe pendant 1 round, en passant sur tout danger évident et sur les ennemis se trouvant sur son chemin.</p>
+<p><strong>Échec critique</strong> La cible est Stupéfiée 4 et se déplace vers la case choisie par la plus directe route possible pendant 1 round, en passant sur tout danger évident et sur les ennemis se trouvant sur son passage. Si la créature atteint sa destination, elle doit y rester pendant 1d4 rounds mais peut autrement agir normalement.</p>
 <hr />
 <p><strong>Intensifié (+2)</strong> Vous ciblez 1 créature supplémentaire, en choisissant une autre case à portée comme destination.</p>
