--- a/data/spells/enchantment-04-PztLrElcZfLwRnEq.htm
+++ b/data/spells/enchantment-04-PztLrElcZfLwRnEq.htm
@@ -1,7 +1,6 @@
 Name: Dreamer's Call
 Nom: Appel du rêveur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The target becomes distracted and suggestible, inundated by vivid daydreams.</p>
