--- a/data/spells/enchantment-04-oXCwHBeDja4e0Mx0.htm
+++ b/data/spells/enchantment-04-oXCwHBeDja4e0Mx0.htm
@@ -1,7 +1,6 @@
 Name: Touch of the Moon
 Nom: Contact lunaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When you touch the target, a symbol of the moon appears on its forehead, glowing with soft moonlight. The target glows with dim light in a 20-foot radius. It also gets a benefit based on a phase of the moon, starting with the new moon and changing to the next phase at the end of each of its turns.</p>
