--- a/data/spells/enchantment-04-qwlh6aDgi86U3Q7H.htm
+++ b/data/spells/enchantment-04-qwlh6aDgi86U3Q7H.htm
@@ -1,7 +1,6 @@
 Name: Suggestion
 Nom: Suggestion
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your honeyed words are difficult for creatures to resist. You suggest a course of action to the target, which must be phrased in such a way as to seem like a logical course of action to the target and can't be self-destructive or obviously against the target's self-interest. The target must attempt a Will save.</p>
@@ -16,6 +15,6 @@ Nom: Suggestion
 <p><strong>Succès critique</strong> La cible n’est pas affectée et sait que vous avez tenté de la contrôler.</p>
 <p><strong>Succès</strong> La cible n’est pas affectée et pense que vous lui avez parlé normalement, sans lui lancer de sort.</p>
 <p><strong>Échec</strong> La cible suit immédiatement votre suggestion. Le sort prend fin au bout d’1 minute ou quand la cible a complètement achevé la suggestion ou si la suggestion devient autodestructrice ou a d’autres effets négatifs évidents.</p>
-<p><strong>Échec critique</strong> Comme l’échec, mais la durée de base est de 1 h.</p>
+<p><strong>Échec critique</strong> Comme l’échec, mais la durée de base est de 1 heure.</p>
 <hr />
 <p><strong>Intensifié (8e)</strong> Vous pouvez cibler jusqu’à 10 créatures.</p>
